# park-cpp

./: .gitignore  .travis.yml  README.md
iz1/: CMakeLists.txt  mybuild.sh
iz1/include/: html_tag.h  html_tag_attribute.h  str_mem.h
iz1/include/html_tag/: attr.h  html_tag.h  tag.h
iz1/include/my_str/: alg.h  mem.h
iz1/src/: alg.c  attr.c  html_tag.c  html_tag_attribute.c  main.c  mem.c  str_mem.c  tag.c
iz1/test/: CMakeLists.txt  attr.cpp  check_attr_format.cpp  check_html_tag_format.cpp  html_tag.cpp
iz2/: CMakeLists.txt  README.MD  README.md  configure_cppcheck.cmake  configure_test.cmake  install_gtest.cmake
iz2/examples/: clear_negative.txt  clear_positive.txt  create.py  dirty_negative.txt  dirty_positive.txt  neutral.txt  script.py
iz2/include/: header.h  moodfinder.h  moodfinder_errors.h  moodfinder_profile.h
iz2/src/: main.c  moodfinder.c  moodfinder_profiler.c  moodfinder_s.c  source.c
iz2/test/: CMakeLists.txt  f.cpp  moodfinder.cpp
